<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">PillApp</string>
    <string name="title_activity_today">Today</string>
    <string name="edit_message">Enter your Medicine</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_medicine">My Medicine</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="pill_name">Please insert pill name!</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>

</resources>
