<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddActivity">

    <EditText android:id="@+id/pill_name"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pill_name" />

    <TimePicker
        android:id="@+id/tp_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pill_name"
        android:layout_centerInParent="true"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/checkbox_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tp_time"
        android:layout_centerInParent="true">

        <CheckBox android:id="@+id/checkbox_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/checkbox_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday"
            android:onClick="onCheckboxClicked"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/checkbox_layout"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btn_set_alarm"
            android:text="@string/str_btn_set_alarm"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/button_set_alarm"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="15dip"
            />

        <Button
            android:id="@+id/btn_cancel_alarm"
            android:text="@string/str_btn_cancel"
            android:layout_toRightOf="@id/btn_set_alarm"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/button_cancel"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="15dip"
            />

    </RelativeLayout>

</RelativeLayout>
