<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_history"
        android:onClick="sendHistory"
        android:layout_below="@id/edit_message"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_today"
        android:onClick="sendToday"
        android:layout_below="@id/edit_message"
        android:layout_toRightOf="@id/history" />

    <Button
        android:id="@+id/tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_tomorrow"
        android:onClick="sendTomorrow"
        android:layout_below="@id/edit_message"
        android:layout_toRightOf="@id/today" />

    <Button
        android:id="@+id/notificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createNotification"
        android:text="Create Notification"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/tomorrow"
        android:layout_alignEnd="@+id/tomorrow">
    </Button>

</RelativeLayout>
